--- a/add.html
+++ b/add.html
@@ -86,14 +86,15 @@
   </div>
 
   <script>
-    // Firebase Config
+    // ✅ NEW Firebase Config for ConceptDash
     const firebaseConfig = {
-      apiKey: "AIzaSyD13EXAMPLE",
-      authDomain: "food-ae7ff.firebaseapp.com",
-      projectId: "food-ae7ff",
-      storageBucket: "food-ae7ff.appspot.com",
-      messagingSenderId: "256095054979",
-      appId: "1:256095054979:web:22de2c16f9acb15f65a08f"
+      apiKey: "AIzaSyB1geQ2jsqrAGw50NLnBncWvxCPD_n5Kqk",
+      authDomain: "concept-dash-e1b60.firebaseapp.com",
+      projectId: "concept-dash-e1b60",
+      storageBucket: "concept-dash-e1b60.appspot.com",
+      messagingSenderId: "442954536333",
+      appId: "1:442954536333:web:143a03ca359ba3219bd9c4",
+      measurementId: "G-RYXJVCDF9K"
     };
 
     firebase.initializeApp(firebaseConfig);
